--- a/API/services/google.js.save.3
+++ b/API/services/google.js.save.3
@@ -14,40 +14,31 @@ function welcomeIntent(agent) {
     var ssml = "<speak>Welcome to Pitt Menu! <break time='.3s'/> You can ask things such as, <break time='.3s'/> What's for lunch today? <break time='.3s'/> or <break time='.3s'/> What's for supper on thursday? </speak>"
     agent.add(ssml);
 }
-function menuIntent(agent) {
+async function menuIntent(agent) {
     var menutype = agent.parameters.menu;
     var date = agent.parameters.date;
     var timeperiod = agent.parameters['time-period'];
     var menutypeBool;
     date = date.split('T')[0];
     if (menutype == 'dinner') {
-        menutypeBool = 0;
-    }
-    else {
         menutypeBool = 1;
     }
+    else {
+        menutypeBool = 0;
+    }
     console.log(menutype, menutypeBool, date, timeperiod);
-    var itemList = '';
-    var getMenu = new Promise((resolve, reject) => {
-        sqlService.GetMenuItems(date, menutypeBool).then((items => {
-        	console.log(items);
-            async.forEach(items, function(item) {
-		console.log(item);
-                itemName = item;
-                itemName = itemName.replace('&', 'and');
-                console.log(itemName);
-                        itemList += itemName + ' <break time=".3s"/> ';
-                    });
-                resolve();
-       
-        }));
-    });
-    console.log(itemList);
-    return getMenu.then(() => {
-        var SSML = "<speak> Okay! The Menu for " + menutype + " on " + date + " is: <break time='.5s'/>" + itemList + "</speak>";
-        agent.add(SSML);
-    })
+    var items = await getMenu(menutypeBool, date);
     
+}
+function getMenu(menutypeBool, date) {
+    return new Promise((resolve, reject) => {
+        sqlService(date, menutypeBool, function(result) {
+            items = '';
+            resolve(result[0]);
+        });
+        
+    });
+	
 }
 function googleWebhookProcessor(req, res) {
     const agent = new WebhookClient({request: req, response: res});
