--- a/API/services/google.js.save.4
+++ b/API/services/google.js.save.4
@@ -29,18 +29,15 @@ function menuIntent(agent) {
     console.log(menutype, menutypeBool, date, timeperiod);
     var itemList = '';
     var getMenu = new Promise((resolve, reject) => {
-        sqlService.GetMenuItems(date, menutypeBool).then((items => {
-        	console.log(items);
-            async.forEach(items, function(item) {
-		console.log(item);
-                itemName = item;
-                itemName = itemName.replace('&', 'and');
-                console.log(itemName);
-                        itemList += itemName + ' <break time=".3s"/> ';
-                    });
-                resolve();
-       
-        }));
+        sqlService.GetMenuItems(date, menutypeBool function(result) {
+            async.forEach(result[0], function(item, callback) {
+		itemName = item['Item Name'];
+		itemName = itemName.replace('&', 'and');
+		console.log(itemName);
+                itemList += itemName + ' <break time=".3s"/> ';
+            });
+            resolve();
+        });
     });
     console.log(itemList);
     return getMenu.then(() => {
